

  10 Dec 2014; Justin Lecher <jlec@gentoo.org> -lh-sources-3.17.4.ebuild,
  +lh-sources-3.17.6.ebuild:
  Bump to latest genpatches and linux release; drop old

  08 Dec 2014; Justin Lecher <jlec@gentoo.org>
  -files/c2412d91c68426e22add16550f97ae5cd988a159.patch,
  -files/lh-sources-3.15-armv6.patch:
  Drop old patches

  08 Dec 2014; Justin Lecher <jlec@gentoo.org> lh-sources-3.17.4.ebuild:
  Bump to latest aufs3, genpatches and linux release

  23 Nov 2014; Justin Lecher <jlec@gentoo.org> -lh-sources-3.17.3.ebuild,
  +lh-sources-3.17.4.ebuild:
  Bump to latest genpatches and aufs3 release

  17 Nov 2014; Justin Lecher <jlec@gentoo.org> -lh-sources-3.16.1.ebuild,
  -lh-sources-3.16.2.ebuild, -lh-sources-3.16.3.ebuild,
  -lh-sources-3.16.4.ebuild, -lh-sources-3.16.5.ebuild,
  -lh-sources-3.16.6.ebuild, -lh-sources-3.17.1-r1.ebuild,
  -lh-sources-3.17.2.ebuild, +lh-sources-3.17.3.ebuild:
  Bump to latest aufs3, genpatches and linux release; drop old

*lh-sources-3.17.2 (31 Oct 2014)

  31 Oct 2014; Justin Lecher <jlec@gentoo.org> +lh-sources-3.17.2.ebuild:
  Bump to latest aufs3, genpatches and linux release

*lh-sources-3.17.1-r1 (20 Oct 2014)

  20 Oct 2014; Justin Lecher <jlec@gentoo.org> +lh-sources-3.17.1-r1.ebuild,
  +files/lh-sources-3.17-armv6.patch:
  Bump to latest aufs3, genpatches and linux release

*lh-sources-3.16.6 (16 Oct 2014)

  16 Oct 2014; Justin Lecher <jlec@gentoo.org> +lh-sources-3.16.6.ebuild:
  Bump to latest genpatches and linux release

*lh-sources-3.16.5 (10 Oct 2014)

  10 Oct 2014; Justin Lecher <jlec@gentoo.org> +lh-sources-3.16.5.ebuild:
  Bump to latest genpatches and linux release

  06 Oct 2014; Justin Lecher <jlec@gentoo.org> lh-sources-3.16.4.ebuild:
  Bump to latest genpatches

*lh-sources-3.16.4 (06 Oct 2014)

  06 Oct 2014; Justin Lecher <jlec@gentoo.org> +lh-sources-3.16.4.ebuild:
  Bump to latest aufs3, genpatches and linux release

  23 Sep 2014; Justin Lecher <jlec@gentoo.org> Manifest:
  Fix checksums of changed files
