@@ -1,12 +1,21 @@
 DIST 0001-block-cgroups-kconfig-build-bits-for-BFQ-v7r6-3.17.patch1 3338 SHA256 157f6f386c47ddd9c4b9c9ae6c694c74d79c612bdda7f1df351335bba389a2e3 SHA512 4699780642d97f2a98e82bcaed4dd348a444dd17a908d84332a7423fec08fc715a96edcf45ec107f08279da89cc0800d0062162135135b1b467a2afbb3a6be32 WHIRLPOOL f1f2972517032942b7d4cec67b1895eaa009016c18e767530f48252846e653a80acae2dcb98afceb6d752ff31879706b11c92f48a2d0b9286fb9bf687ae197cd
+DIST 0001-block-cgroups-kconfig-build-bits-for-BFQ-v7r6-3.18.patch1 3339 SHA256 616294ccad2106cec1812fd1f1e94795b8bcf5ad7cc0c4adbc42dda82c0c59bc SHA512 58b7aa96279ac5989a74f5eb63bd6b2c827bb29a981452617cacc3b5fd5d84b22f65af07573fa38cd3bb7ca0e2c0965290f458317e2988744b90bd1e29a43f04 WHIRLPOOL e6ea771a0508d36f9e547bcd7933d5b14ec1b8ccebdf7864d214e664372f828dbed09fc890c44d923dd7c32e92d3928d25918484bca4964d370002b09eab5a89
 DIST 0002-block-introduce-the-BFQ-v7r6-I-O-sched-for-3.17.patch1 223778 SHA256 53e591f0cab9ea0f0ae823041fa5134686de188a616657cb8acef34c01970c48 SHA512 ef69eac3bb620be4cad6988efc9161d58337bb7934f9a12aeb76392a3a308accd2b3cb56324c5c2a061781b98d160d501586b5c575a41f0596905022a936a2a9 WHIRLPOOL be44e895f674d60e16564f6103693906b5842f789f76f273c481e53c0d377140d754c2d195ffd11a51f049031d4e5912304212f549e86cd03d385c64fb0216d4
+DIST 0002-block-introduce-the-BFQ-v7r6-I-O-sched-for-3.18.patch1 223778 SHA256 71ddfda78d006b8ef1ac611be1672fa6f23e5acaa7963802bf91e0ad01c9e7e8 SHA512 2ddaa3c6ff9490016becedf241b8522edcbcadc80f7652478270d94a12ac8ee9dc8f47ad7fd19f7fcc3f21f70a492ad5aab548370f3994c402bdb3c1d79373df WHIRLPOOL 7a638f8e5d92409f7437ea66198294da5b1c1330ec246facb1499e1478eaab76ae815cea66f2e38b1d76d4d04d7141a33b8df26491db9a93acc9396b5a97e24b
 DIST 0003-block-bfq-add-Early-Queue-Merge-EQM-to-BFQ-v7r6-for-3.17.0.patch1 41809 SHA256 9e70b8051c432168dd9ba0d21d5b96afb580473c9801fec185a745f53b75ae44 SHA512 5099ed226864a13df097256bd80caa09f0d5aea7d832fae72481bfebfad92824019a2762ba5f870a2b072eb2ffaaa9311021e3ea9efda3244b4c17dcf2a9e311 WHIRLPOOL d742a722f741629049d53622ae56f1a2d4cc4be4fd6d0eeac9de85ff80dfc1f0ba4933a1fa8b050fe7712ba464f486739afccd6de02cdcfa5a5dce2a55ab1774
+DIST 0003-block-bfq-add-Early-Queue-Merge-EQM-to-BFQ-v7r6-for-3.18.0.patch1 41809 SHA256 4f761d9ec34b9b9b5206be7d1e4e6e2e90a1c8f4c3953cade573995ee2f5471f SHA512 5a2c76366eefd263f18f484ab3921cbb140c62d4636d1703523e329a3b893d4c310dd7bf0f04b9953313bc7c83fd4b3e562b4edd9bd09797b7e57d87d69dc6cc WHIRLPOOL 50740503c22312112f7ec380243d4e4dba16ceddb928c78c6fc786bbe387b9b6a748efb7f122aed1f48f51de252ce543eb643ebb96dbaf8b8ff3603abba77d15
 DIST README-v7r6-0.BFQ 20800 SHA256 caadc9333a10329ca54386ffc6ec6733550ff055845a8e627ceffd634a5b5dd1 SHA512 0d4925c7ecd237b5d9836ad57429153731d95ad7817252489bbeebdd2424ae9b52c131bec1627efcf6835c79a203d76f4bbecd5bc1913cd2f60de06efac5d6e3 WHIRLPOOL fd2de12560e1ea1505cdc6289d4b709e6037bc29329a2238ae892bb141ea8854c8eb2990f7783937232365dfce4cb027c3ef0792664b48be45474b5e7495518d
 DIST aufs-sources-3.17_p20141208.tar.xz 164724 SHA256 e9ed077b743e088407ce62d2206853d681707855d89588e550a6911a24e7ee0e SHA512 68cf0e09466053e2ebc175e6443be135d7a91edca25295c7d9d5a56c37281ce37205e89b15a7f508d6684a8d7d3a31cae345a6916892a060a309035efb9bf704 WHIRLPOOL caf2ca9abc58223b774129573e3e67e73b02fd8003890a068729237cd209df83deafa35ac8f69f8cc933cec2f562409f208cf570cc711ea666b0f2adde13a968
+DIST aufs-sources-3.18_p20141215.tar.xz 164824 SHA256 572d099b3097c892e6f7b0478ed53e631253d67e5f77764a5d7395021400b730 SHA512 6865624d3096bcc866f778177016e6fa948502c466d4c628dac98cd1c6b2070415359eb7b391b39484b18a4d22ec70eeb4c6af17793035c9872cd692db6b6633 WHIRLPOOL 9ccfa5248d6cdae0045399df39462e08cf3b3f362c36ec7041b332bb370577807474c1b37d16ed74f6e1e85dd40e8c6dc8374d28cb702ab26b4891578e8bb579
 DIST deblob-3.17 127288 SHA256 93abf2894baf4d937ff2889fd1bdd04f1093bdb1321c79d8275e40f483e57ad1 SHA512 cb82b7cf59765991f74a1f5829cc6fb036a2e3466337b508884bcc5b27d7fef35db2e653cead705a37c7935c0bfb6bfeb1cdac7293de41994ee9c17ddca2ef39 WHIRLPOOL 0697a7bd39f270393814ffcbc746da6883e41fb32354223cdde8757b126d762bff55e69541c4d9ea0cc75093e19b73c4b6b09d98d9983e07b64fc4794615f2c8
+DIST deblob-3.18 127087 SHA256 c720eabb3911f8dfa4398c4250853df4633018abebc01a509ee4a283c3e00941 SHA512 6fe33762ba19aad7ff891b7b805cc26f6e2926f5e40c92fa45bc7f31bdeb5c8fc42b97e5d37d71b9422da239c7c54abd25f1fa2fa1e5733c6053abbf4c9e9011 WHIRLPOOL c351a3ae15c59081fca69c1b5d9b9de10f024eb01f1426722a0d6ccb7caa34330be42897cd85cf19b22ff876352b0cec1c19707edc81c4cb01ad9c1df2e3d831
 DIST deblob-check-3.17 638139 SHA256 6ddbf2201595f0ba80166f44163621a4b14f508934c7dcc6c4f39573531aff71 SHA512 f9c60b21af2ee50db85a85329c0a5e3ecc5195ca6d9cc7d6bf499fcdb2eddf1454d99e30b91ce6062f484069ac2096da445643bdea8358c5ff1a79292a5947d6 WHIRLPOOL a0a15be3a48fabc56a782b0f6a92cb88520479d9f837e1de8b4bd2990b751e25f5a130542208f1c18b8f89c5a29edde846adb425834a640b6e188eee38bd98e4
+DIST deblob-check-3.18 654232 SHA256 30f22602b6ddf2cbccc16ef25fdc4d92755f3972e1c671d7cab8b9d6865eb155 SHA512 2cff9abef479a55dd6a0699371be8227ba63b18da1fb153d5df382e0a5e4f1b745b7de256a367a36efa9d12e2aad5622cc288efef009feebf81c108dbef4fe16 WHIRLPOOL e92927ad1565e80ce87e8bda372f8f7eb42bc0f47ad9b19fe5cf737903b2021fd6e3756e8d22b70f3037a46c254fec8b7285b37beb10795ccb4ca99d38876f8c
 DIST genpatches-3.17-9.base.tar.xz 259208 SHA256 daabaa1df13a8e3230d3559cf67e75590d315852cbf213a1fba9ecf2af7815ad SHA512 8aeea478a3e6de3dea75102bef25d5404e37491164289ccc85df41dd90eb3a1ebd7192a65dc73ba0b1c99e3538db706dcd5433e776e1d0cd522deae0ca8e752d WHIRLPOOL 9cfabb4b2459a46eb27bcca8c5eaa93cf1f2ff5a9aba5153e71e117aab21ff4cfee1d4a389dc375503378f7e8b0c3f0a9a5171416db6247ecf83a9f9e4a46a39
 DIST genpatches-3.17-9.extras.tar.xz 16160 SHA256 d23f013006f2aeecb92a1997c9912561527410abdcbccfd6572e16fa7b8c8465 SHA512 737c66d777d54139313c930449b3b0fe680141f192aea1d1063e585bec2846c90bf0ee2c15500f0386a8d82254085196819b493bb360e20ecc58fec2e6388a7e WHIRLPOOL e36e3ad36d93deaa5667e5cadbabd67029be4cb31247fa37c28dea90dc34eac40076dcb840d43e5d14420df9deb91fe1539dcb3bdd5c1b7a69cd0a1c1fbc546f
+DIST genpatches-3.18-2.base.tar.xz 3472 SHA256 438312e5ce41f24af0828754fe8871e38f4c86592b3d2889d6c0685213763ae9 SHA512 f68a97af22768b8b08d2bf43f38ec667b23437d92f5c4a986f73a60faa749dc74ed9bea57ab3701f764f0b9280b370235d7ef61e93328f2a836ba5eda64a7149 WHIRLPOOL f7e4f882b65312e0a6cf4f5adf03cbbfc764d9ff8130ea3db21153cfc8f131196f67be41c437cbf7c3ca4a5f483e206a8e2294884197625930f50b21063dbf0e
+DIST genpatches-3.18-2.extras.tar.xz 16168 SHA256 f216aba794a22809cb56cf8b67b8b443c04e5b7013a4365a7030a661dd969695 SHA512 af7d3ca8a15334fe9a8eb21648e11e07e6e42ddd37237130c1e9824532fabb46b35ef99d524c616015c8ffff76fd38c14fbffa0047f3e4ab3ab32b1bdcbe303b WHIRLPOOL ebe0a683ead509a6f68d2a6c16d3d266fe36252187e6aac0c5d0cf0abe7bd3b7c8daa7af0b38e73ceab0e8b8613a3491cc12dee8378fcbb48f2d9d542d6965c6
 DIST lh-logo_linux_320_240_clut224.ppm 58367 SHA256 9692bfdd2257ae5131ac14eb6f34386416ec228be68a4bb02381378876e34812 SHA512 18cd56961a81f4ca87933859a35d84af86602f480a6b92dbb3c2f4a9b83abb7023c64939bc781bbe7f9e8e105df508698a66790909f9144fb99c1e347ccf22de WHIRLPOOL 66933acfce018d07d9d70dbfd56155bb23f7fdccb2295c28100165d6c8c14194556bdadf66b119f42db1d700d1ce5bf2eeca17f44c26582bb13656d166c055e8
 DIST lh-sources-kernel-da192988c7cb69709bb70f74f576f1479dce0e1d.patch 16381 SHA256 65118fccbba51186bd5904c2f3439e4dafbdebf3b638b2338abcf69a3bda1333 SHA512 66043a3cd267be5209c382b6aa9c9cf995d5499e8873546794042fbf17bacf577f9b4ab010fd3f20c629f40613c89b3e3d49536e7717b4a6e380c01547c39f41 WHIRLPOOL c43d99483c02fb5b193769f0a7a6ce9a868b12aad29fc1382b4d3c72cb4cb5baefa98929d5d9fb7d5e1524f5b6e75f5330ed039a15391a7a54e7b7053c3847a1
 DIST linux-3.17.tar.xz 80333152 SHA256 f5153ec93c5fcd41b247950e6a9bcbc63fa87beafd112c133a622439a0f76251 SHA512 29c99764e371f7005dbbe2bbe4458b4deeae5297da7e5b719b0f29f6f018629338b608369162ae6bd76bec4d8719cf491257ac57fdd5277cce8941b7f90246a0 WHIRLPOOL 4b0ba9d997f28a317991287160c91c4e4f2245d7e08c7cb9691f67c3838bddb3ab8048b01e841e6659eceb94a269b6bde32f4ca521d999593d0e9473c8559b46
+DIST linux-3.18.tar.xz 80934708 SHA256 becc413cc9e6d7f5cc52a3ce66d65c3725bc1d1cc1001f4ce6c32b69eb188cbd SHA512 2f0b72466e9bc538a675738aa416573d41bbbd7e3e2ffd5b5b127afde609ebc278cec5a3c37e73479607e957c13f1b4ed9782a3795e0dcc2cf8e550228594009 WHIRLPOOL 81634af631b7d30ccd1f4798f96f44d9aa0ba6609b73f2747eb6aebaf7a99487fb2dbd45767605186182533cb222bfd9236e8dd5e11a04fdb67c211e4e0a91d6
